--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -9,7 +9,7 @@ jobs:
       - name: Checkout A Repo  
         uses: actions/checkout@v3  
         with:  
-          ref: dev  
+          ref: develop  
   
       - name: Add B Repo as Remote  
         run: |  
@@ -18,7 +18,7 @@ jobs:
   
       - name: Force Push to B Repo  
         run: |  
-          git push --force b-repo dev  
+          git push --force b-repo develop  
   
       # 注意：force push会覆盖B仓库的dev分支，请确保这是你想要的行为  
       # 如果你想要合并而不是覆盖，你需要使用不同的策略（如git pull和git merge）
