--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,22 +1,22 @@
-name: Sync Code to B Repo  
-on:  
-  workflow_dispatch:  
-  
-jobs:  
-  sync-code:  
-    runs-on: ubuntu-latest  
-    steps:  
-      - name: Checkout A Repo  
-        uses: actions/checkout@v3  
-        with:  
-          ref: develop  
-  
-      - name: Add B Repo as Remote  
-        run: |  
-          git remote add b-repo https://sherminMing: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@github.com/sherminMing/lnp-history-backup.git
-          git fetch b-repo  
-  
-      - name: Force Push to B Repo  
-        run: |  
-          git push --force b-repo develop  
+name: Sync A to B
 
+on:
+  push:
+    branches:
+      - develop
+
+jobs:
+  sync:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout A develop
+        uses: actions/checkout@v2
+        with:
+          ref: main
+          repository: sherminMing/Lnp-history
+      - name: Push to B develop
+        uses: ad-m/github-push-action@master
+        with:
+          branch: main
+          repository: sherminMing/lnp-history-backup
+          github_token: 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
