--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,7 @@
 name: Sync Code to B Repo  
   
 on:  
-  push:  
-    branches:  
-      - develop  
+  workflow_dispatch:
   
 jobs:  
   sync-code:  
