--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
         run: |  
           git fetch --all  
           git reset --hard b-repo/develop  
-          git push --force "https://${B_REPO_ACCESS_TOKEN}:@github.com/sherminMing/lnp-history-backup.git" develop  
+          git push --force "https://sherminMing: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@github.com/sherminMing/lnp-history-backup.git" develop  
         env:  
           B_REPO_ACCESS_TOKEN: ${{ secrets.B_REPO_ACCESS_TOKEN }}  
   
