--- a/.github/workflows/merge-to-main.yaml
+++ b/.github/workflows/merge-to-main.yaml
@@ -5,7 +5,7 @@ on:
 
 jobs:  
   merge-to-main:
-    name: Merge to main
+    name: Merge code to main
     runs-on: [ ubuntu-latest ]
     steps:
       - name: Checkout  Code
@@ -15,4 +15,9 @@ jobs:
           
       - name: Megre to main
         run: |
-           ls    
+           git config --global user.email "automationNoReply@ssnc.com"
+           git config --global user.name "Github Automation"  
+           git checkout main  
+           git pull  
+           git merge --no-ff origin/$GITHUB_REF  
+           git push origin main  
