--- a/.github/workflows/create-pull-request.yaml
+++ b/.github/workflows/create-pull-request.yaml
@@ -3,17 +3,20 @@ on:
   workflow_dispatch:
 
 jobs:
-  productionPromotion:
+  create_pull_request:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-        with:
-          ref: release/07/08
-      - name: Reset promotion branch
-        run: |
-          git fetch origin main:release/07/08
-          git reset --hard main
+      - name: Checkout code
+        uses: actions/checkout@v2
+      
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v6
         with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          commit-message: Automated PR created by GitHub Action
+          title: Automated Pull Request
+          body: |
+            This is an automated pull request created by a GitHub Action.
+            Please review and merge as necessary.
           branch: release/07/08
+          base: main  
