--- a/.github/workflows/create-pull-request.yaml
+++ b/.github/workflows/create-pull-request.yaml
@@ -18,5 +18,5 @@ jobs:
           body: |
             This is an automated pull request created by a GitHub Action.
             Please review and merge as necessary.
-          branch: release/07/09
+          branch: release
           base: main
