--- a/.github/workflows/create-pull-request.yaml
+++ b/.github/workflows/create-pull-request.yaml
@@ -16,6 +16,9 @@ jobs:
             touch example.txt
             echo "Hello, world!" >> example.txt
             cat example.txt
+            git add .
+            git commit -m "Add file"
+            git push
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v6
         with:
