--- a/.github/workflows/create-pull-request.yaml
+++ b/.github/workflows/create-pull-request.yaml
@@ -16,6 +16,7 @@ jobs:
             touch example.txt
             echo "Hello, world!" >> example.txt
             cat example.txt
+            git checkout release/07/09
             git config --global user.email "automationNoReply@ssnc.com"
             git config --global user.name "Github Automation"
             git add .
@@ -29,4 +30,5 @@ jobs:
           body: |
             This is an automated pull request created by a GitHub Action.
             Please review and merge as necessary.
-          branch: release
+          branch: release/07/09
+          base: main
