--- a/.github/workflows/create-pull-request.yaml
+++ b/.github/workflows/create-pull-request.yaml
@@ -21,7 +21,7 @@ jobs:
             git config --global user.name "Github Automation"
             git add .
             git commit -m "Add file"
-            git push
+            git push --set-upstream origin release/07/09
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v6
         with:
