--- a/.github/workflows/create-pull-request.yaml
+++ b/.github/workflows/create-pull-request.yaml
@@ -14,13 +14,12 @@ jobs:
         run: |
             ls
             touch example.txt
-            echo "Hello, world!" >> example.txt
-            cat example.txt
+            echo "Hello, world! Don't worry!" >> example.txt
             git checkout -b release/07/09 main 
             git config --global user.email "automationNoReply@ssnc.com"
             git config --global user.name "Github Automation"
             git add .
-            git commit -m "Add file"
+            git commit -m "Add test file"
             git push --set-upstream origin release/07/09
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v6
