--- a/.github/workflows/create-pull-request.yaml
+++ b/.github/workflows/create-pull-request.yaml
@@ -2,32 +2,23 @@ name: Create PR
 on:
   workflow_dispatch:
 
-jobs:
-  create_pull_request:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - name: Add file
-        run: |
-            ls
-            touch example.txt
-            echo "Hello, world! Don't worry!" >> example.txt
-            git checkout -b release/07/09 main 
-            git config --global user.email "automationNoReply@ssnc.com"
-            git config --global user.name "Github Automation"
-            git add .
-            git commit -m "Add test file"
-            git push --set-upstream origin release/07/09
-      - name: Create Pull Request
-        uses: peter-evans/create-pull-request@v6
-        with:
-          commit-message: Automated PR created by GitHub Action
-          title: Automated Pull Request
-          body: |
-            This is an automated pull request created by a GitHub Action.
-            Please review and merge as necessary.
-          branch: release/07/09
-          base: main
+jobs:  
+  create-pull-request:  
+    runs-on: ubuntu-latest  
+    steps:  
+      - uses: actions/checkout@v3  
+        with:  
+          ref: feature/new-feature  
+  
+      - name: Create Pull Request  
+        uses: peter-evans/create-pull-request@v6  
+        with:  
+          token: ${{ secrets.GITHUB_TOKEN }}  
+          commit-message: Update for new feature  
+          title: 'New Feature Update'  
+          body: |  
+            This PR updates the code with the new feature.  
+            branch: release/07/09
+          base: main  
+          labels: |  
+            automerge  
