--- a/.github/workflows/merge-to-main.yaml
+++ b/.github/workflows/merge-to-main.yaml
@@ -13,8 +13,7 @@ jobs:
       - name: Merge release branch to main
         run: |
           BRANCH_TO_MERGE="release/07/09"
-          git checkout --track origin/main
-          git pull origin main
+          git checkout main
           git merge $BRANCH_TO_MERGE --no-commit --no-ff
         
           if [ $? -eq 0 ]; then
