--- a/.github/workflows/merge-to-main.yaml
+++ b/.github/workflows/merge-to-main.yaml
@@ -16,5 +16,5 @@ jobs:
             TARGET_BRANCH="main"
             git checkout $TARGET_BRANCH
             git pull origin $TARGET_BRANCH
-            git merge $SOURCE_BRANCH --no-ff --log="Merge $SOURCE_BRANCH into $TARGET_BRANCH"
+            git merge $SOURCE_BRANCH --no-ff
             git push origin $TARGET_BRANCH
